<resources>
    <string name="app_name">Detail-MVC</string>
    <string name="enter_detail">Enter Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
</resources>