<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreDetailsFragment">

    <TextView
        android:id="@+id/fragment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_phone" />

    <TextView
        android:id="@+id/fragment_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_bday" />

    <TextView
        android:id="@+id/fragment_bday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_address" />

    <TextView
        android:id="@+id/fragment_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_name" />
</android.support.constraint.ConstraintLayout>